# OpenCV_in_Ubuntu

./: .gitignore  Install_OpenCV.sh  Install_OpenCV4.sh  Install_OpenCV4_in_Ubuntu20.04.sh  Install_OpenCV_4_4.sh
2day_course/C++/: Makefile  OpenCV_Functions.cpp  OpenCV_Functions.h  OpenCV_Main.cpp  OpenCV_Utils.cpp  OpenCV_Utils.h  m.sh
2day_course/Python/: 00_OpenCV_TEST_Lane.py  00_OpenCV_TEST_SINGLE.py  00_OpenCV_TEST_Trafficlight.py  01_Image_Read,Show,Write.py  02_Video_Read,Show,Write.py  03_Image_Parameters.py  04_Image_Pixel.py  06_Image_ROI.py  07_Image_Channels.py  08_Image_Color_Space.py  09_Trackbar_RGB.py  10_Trackbar_HSV.py  11_Trackbar_HLS.py  12_Image_Split_Color.py  13_Image_Split_Color_Trackbar_HSV.py  14_Image_Split_Color_Trackbar_HLS.py  15_Image_Draw_Line.py  16_Image_Draw_Rect.py  17_Image_Draw_Circle.py  18_Image_Draw_Polygon.py  19_Image_Draw_Text.py  21_Image_Histogram.py  23_Image_Mean_Filter.py  (+16 more)
Data/: LaneDetectionWithPerspectiveTransform.cpp  LaneDetectionWithPerspectiveTransform.py  Lane_Detection_Project_Solution.cpp  Lane_Detection_Project_Solution.py  OpenCV.py  OpenCV_Functions.py  TrafficLight_First.py  TrafficLight_Second.cpp  TrafficLight_Second.py  Traffic_Light_Project_Solution.cpp  Traffic_Light_Project_Solution.py  Traffic_Light_Project_Solution_ver2.cpp  Traffic_Light_Project_Solution_ver2.py  lane_detection_with_draw.cpp  lane_detection_with_draw.py  traffic_light_project.py  traffix_light_project.cpp
Jetson_Nano/C++/: CMakeLists.txt
Jetson_Nano/C++/include/: main.hpp  utils.hpp
Jetson_Nano/C++/src/: main.cpp  utils.cpp
(+141 files in other folders)
